Updated the Games Section AGAIN to fix the border that was sticking out.

--- a/style.css
+++ b/style.css
@@ -150,3 +150,10 @@ a:link {
 	color:  green;
 	font-size:  30px;
 }
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
